[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aiohttp_chromium"
authors = [{name = "Milan Hauth", email = "milahu@gmail.com"}]
description = "aiohttp-like interface to chromium"
keywords = ["chromium", "selenium", "scraping", "webscraping", "scraper", "webscraper", "automation", "gui scripting"]
readme = {file = 'readme.md', content-type='text/markdown'}
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/milahu/aiohttp_chromium"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "aiohttp_chromium.__version__"}
